[tool.poetry]
name = "llamabot"
version = "0.1.0"
description = "A discord bot, created using LlamaIndex, which will act as a helpful assistant to your discord server"
authors = ["Rohan <rsrohan99@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
discord-py = "^2.3.2"
llama-index = "0.12.1"
python-dotenv = "^1.0.1"
qdrant-client = "^1.8.2"
llama-index-vector-stores-qdrant = "0.4.0"
google-generativeai = "^0.3.2"
transformers = "^4.34.0"
llama-index-embeddings-huggingface = "0.4.0"
pydantic = "2.10.3"
nltk ="^3.9.1"
InstructorEmbedding = "*"
llama-index-llms-ollama = "0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
